# genz-ai

./: .gitignore  Makefile  Procfile  README.md  pyproject.toml  render.yaml
.github/workflows/: README.md  code-quality.yml  mypy.yml  pylint.yml  ruff.yml
multi_agent/: __init__.py  settings.py
multi_agent/llm/: __init__.py
multi_agent/sub_agent/: tam_an_agent.py
server/: main.py
server/config/: __init__.py
